# deep-learning-algo-impls

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/workflows/: ci.yml
demos/: neural_network_demo.cpp
docs/: variable_helpers.md
examples/: svm_demo.cpp  variable_helpers_demo.cpp
include/activation/: functions.hpp
include/loss/: functions.hpp  losses.hpp
include/ml/: kmeans.hpp  ml.hpp  pca.hpp  svm.hpp
include/neural_network/: layers.hpp  nn.hpp
include/neural_networks/: cnn.hpp  feedforward.hpp  model.hpp  rnn.hpp
include/optimization/: optimizers.hpp
include/utils/: autograd.hpp  data_loader.hpp  matrix.hpp  pca.hpp  tensor.hpp
src/activation/: functions.cpp
src/loss/: functions.cpp  losses.cpp
src/ml/: kmeans.cpp  pca.cpp  svm.cpp
src/neural_network/: layers.cpp  nn.cpp
src/neural_networks/: cnn.cpp  feedforward.cpp  model.cpp
src/optimization/: optimizers.cpp
src/utils/: autograd.cpp  data_loader.cpp  matrix.cpp  pca.cpp  tensor.cpp
tests/: test_autograd.cpp  test_feedforward.cpp  test_kmeans.cpp  test_layers.cpp  test_matrix.cpp  test_matrix_xtensor.cpp  test_optimizers.cpp  test_pca.cpp  test_svm.cpp  test_svm_autograd.cpp
